5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1756_1189.log
== TEST (2019-05-28 20:19:19) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s,replace(' ', ' ')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s=s,replace(' ', ' ')
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:20:04) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s, replace(' ', ' ')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s=s, replace(' ', ' ')
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:20:19) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s, replace('  ', '  ')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s=s, replace('  ', '  ')
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:20:54) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s. replace('  ', '  ')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:21:04) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s. replace('  ', '  ')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- EXECUTION TIME:
0.201433
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
1
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:21:19) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s.replace('  ', '  ')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:21:39) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s.replace(' ', ' ')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:22:01) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s.replace('', '')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:22:10) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s.replace('', '')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:22:13) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s.replace('', '')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- EXECUTION TIME:
0.168642
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
1
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:22:39) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s.replace(' ',' ')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:22:54) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s.replace(' ',' ')
inv = " "
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- EXECUTION TIME:
0.183745
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
1
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:23:22) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s.replace(' ',' ')
inv = ""
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:23:32) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s.replace(' ',' ')
inv = ""
i = -1
b = 1
c= 0
while i< -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- EXECUTION TIME:
0.132989
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
1
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:23:57) 
-- CODE:
s = input("Digite uma string: ").upper()
s=s.replace(' ',' ')
inv = ""
i = -1
b = 1
c= 0
while i>= -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:25:55) 
-- CODE:
s = input("Digite uma string: ").upper()
s= s.replace(' ',' ')
inv = ""
i = -1
b = 1
c= 0
while i >= -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- EXECUTION TIME:
0.165531
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:26:59) 
-- CODE:
s = input("Digite uma string: ").upper()
s= s.replace(' ',' ')
inv = ""
i = -1
b = 1
c= 0
while i >= -len(s):
	inv = inv + s[i]
	if(s[c])!= (s[i]):
		b = 0
	c = c+ 1
	i = i -1
print(s)
print(b)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
